k8s_master lxd storage pool size added

--- a/k8s_master/tasks/lxd_init.yaml
+++ b/k8s_master/tasks/lxd_init.yaml
@@ -3,5 +3,5 @@
 - name: "LXD preseed"
   ansible.builtin.command: lxd init --preseed <
   args:
-    stdin: "{{ lookup('file', '../files/preseed.yaml') }}"
+    stdin: "{{ lookup('template', '../files/preseed.j2') }}"
 
