--- a/k8s_master/vars/main.yaml
+++ b/k8s_master/vars/main.yaml
@@ -1,5 +1,6 @@
 ---
 
+lxd_poolsize: "200GB"
 metallb_range: "10.5.0.100-10.5.0.200"
 master_host_ip: "10.5.0.1/24"
 master_tenant_ip: "10.5.0.2/24"
